# slidetags_mea_overlap

./: CLAUDE.md  README.md  app.py  generate_synthetic_data.py  pyproject.toml
analysis/: association.py  registration.py  stats.py
data/: loaders.py  schema.py
synthetic_data/: ground_truth_transform.json  synthetic_slide_tags.h5ad
synthetic_data/synthetic_mea/: recording.json  sorting_provenance.pickle  spikeinterface_info.json
synthetic_data/synthetic_mea/extensions/random_spikes/: info.json  random_spikes_indices.npy  run_info.json
synthetic_data/synthetic_mea/extensions/templates/: average.npy  info.json  run_info.json  std.npy
synthetic_data/synthetic_mea/extensions/unit_locations/: info.json  run_info.json  unit_locations.npy
synthetic_data/synthetic_mea/recording_info/: probegroup.json  recording_attributes.json
synthetic_data/synthetic_mea/sorting/: numpysorting_info.json  si_folder.json  spikes.npy
tests/: test_association.py  test_registration.py  test_registration_end_to_end.py
ui/: callbacks.py  layout.py
